--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
 	"devDependencies": {
-		"@pnpm/eslint-config": "^1.0.0",
-		"eslint": "^8.11.0",
-		"typescript": "~4.6.2"
+		"@typescript-eslint/eslint-plugin": "^4.0.1",
+		"@typescript-eslint/parser": "^4.0.0",
+		"eslint": "^7.12.1",
+		"eslint-config-standard-with-typescript": "^21.0.1",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^5.0.0",
+		"typescript": "*"
 	}
 }
