--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+	"scripts": {
+		"test": "vitest"
+	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^4.0.1",
 		"@typescript-eslint/parser": "^4.0.0",
@@ -7,6 +10,8 @@
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^5.0.0",
-		"typescript": "*"
+		"happy-dom": "^7.7.0",
+		"typescript": "*",
+		"vitest": "^0.25.3"
 	}
 }
