--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^4.0.1",
-		"@typescript-eslint/parser": "^4.0.0",
-		"eslint": "^7.12.1",
-		"eslint-config-standard-with-typescript": "^21.0.1",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^5.0.0",
-		"happy-dom": "^7.7.0",
-		"typescript": "*",
-		"vitest": "^0.25.3"
+		"@types/react-dev-utils": "^9.0.12",
+		"vitest": "^0.34.6"
+	},
+	"dependencies": {
+		"react-dev-utils": "^12.0.1"
 	}
 }
