--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
-		"@types/react-dev-utils": "^9.0.12",
-		"vitest": "^0.34.6"
+		"@types/react-dev-utils": "^9.0.15",
+		"vitest": "^1.3.1"
 	},
 	"dependencies": {
-		"mem-fs": "^4.0.0",
+		"mem-fs": "^4.1.0",
 		"mem-fs-editor": "^11.0.0",
+		"p-limit": "^5.0.0",
 		"react-dev-utils": "^12.0.1"
 	}
 }
