--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
 	},
 	"devDependencies": {
 		"@types/react-dev-utils": "^9.0.15",
-		"vitest": "^1.3.1"
+		"vitest": "^1.6.0"
 	},
 	"dependencies": {
+		"antd": "^5.18.3",
 		"mem-fs": "^4.1.0",
-		"mem-fs-editor": "^11.0.0",
+		"mem-fs-editor": "^11.0.1",
 		"p-limit": "^5.0.0",
+		"rax-image": "^2.4.3",
 		"react-dev-utils": "^12.0.1"
 	}
 }
