--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	},
 	"devDependencies": {
 		"@types/react-dev-utils": "^9.0.15",
+		"happy-dom": "^14.12.3",
 		"vitest": "^1.6.0"
 	},
 	"dependencies": {
@@ -11,7 +12,9 @@
 		"mem-fs": "^4.1.0",
 		"mem-fs-editor": "^11.0.1",
 		"p-limit": "^5.0.0",
+		"rax-compat": "^0.3.0",
 		"rax-image": "^2.4.3",
+		"rax-picture": "^2.2.1",
 		"react-dev-utils": "^12.0.1"
 	}
 }
